# agentic-undercover-env

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  24708d586020_increase_agent_id_length.py
apps/api/src/: __init__.py  main.py
apps/api/src/agents/: ai_agent.py  base.py  exceptions.py  human_agent.py  llm_factory.py  prompt_builder.py  prompt_templates.py  retry.py
apps/api/src/api/routes/: __init__.py  episodes.py  providers.py  quota.py
apps/api/src/api/services/: runner_service.py
apps/api/src/api/ws/: __init__.py  game_stream.py  manager.py
apps/api/src/core/: __init__.py  config.py  db.py  logging.py  quota.py  redis.py
apps/api/src/db/: models.py  repository.py
apps/api/src/engine/: __init__.py  context_builder.py  event_emitter.py  exceptions.py  runner.py
apps/api/src/engine/graph/: __init__.py  builder.py  routers.py  state.py
apps/api/src/engine/nodes/: __init__.py  deliberation_node.py  endgame_node.py  init_node.py  polling_node.py  reaction_node.py  speaking_node.py  voting_node.py
apps/api/src/models/: __init__.py  assignment.py  config.py  enums.py  export.py  messages.py  outputs.py  state.py  votes.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/integration/: test_db_episode.py  test_redis_client.py
apps/api/tests/integration/api/: test_episodes_api.py  test_providers_api.py  test_quota_api.py  test_runner_api.py  test_websocket_api.py
apps/api/tests/unit/: __init__.py  test_config.py  test_health_endpoint.py  test_lifespan.py  test_startup_log.py  test_startup_validation.py
apps/api/tests/unit/agents/: test_ai_agent.py  test_base.py  test_human_agent.py  (+3 more)
(+70 files in other folders)
